Revert "Merge branch 'main' of https://github.com/https-github-com-lhung894/ASP.NET into main"
This reverts commit 75a7d13fab21d01d35f49a0743dc9a0d53de1c31, reversing
changes made to 829ed163bf32967c601b19abe1ac2e204bbf3aea.

--- a/addNhanVien.html
+++ b/addNhanVien.html
@@ -451,6 +451,13 @@
                                                         <label for="phongban">Phòng ban <span class="text-danger">*</span></label>
                                                         <select class="form-control" name="phongban" required>
                                                             <option value="">-- Please select --</option>
+                                                            <option value="html">HTML</option>
+                                                            <option value="css">CSS</option>
+                                                            <option value="javascript">JavaScript</option>
+                                                            <option value="angular">Angular</option>
+                                                            <option value="angular">React</option>
+                                                            <option value="vuejs">Vue.js</option>
+                                                            <option value="ruby">Ruby</option>
                                                             <option value="php">PHP</option>
                                                             <option value="asp">ASP.NET</option>
                                                             <option value="python">Python</option>
@@ -463,9 +470,17 @@
                                                         <label for="chucvu">Chức vụ <span class="text-danger">*</span></label>
                                                         <select class="form-control" name="chucvu" required>
                                                             <option value="">-- Please select --</option>
+                                                            <option value="html">HTML</option>
+                                                            <option value="css">CSS</option>
+                                                            <option value="javascript">JavaScript</option>
+                                                            <option value="angular">Angular</option>
                                                             <option value="angular">React</option>
                                                             <option value="vuejs">Vue.js</option>
                                                             <option value="ruby">Ruby</option>
+                                                            <option value="php">PHP</option>
+                                                            <option value="asp">ASP.NET</option>
+                                                            <option value="python">Python</option>
+                                                            <option value="mysql">MySQL</option>
                                                         </select>
                                                     </div>
                                                 </div>
@@ -478,19 +493,14 @@
                                                             <option value="css">CSS</option>
                                                             <option value="javascript">JavaScript</option>
                                                             <option value="angular">Angular</option>
+                                                            <option value="angular">React</option>
+                                                            <option value="vuejs">Vue.js</option>
+                                                            <option value="ruby">Ruby</option>
+                                                            <option value="php">PHP</option>
+                                                            <option value="asp">ASP.NET</option>
+                                                            <option value="python">Python</option>
+                                                            <option value="mysql">MySQL</option>
                                                         </select>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label for="honv">Họ nhân viên <span class="text-danger">*</span></label>
-                                                        <input type="text" name="honv" class="form-control" placeholder="Nguyễn" required>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label for="tennv">Tên nhân viên <span class="text-danger">*</span></label>
-                                                        <input type="text" name="tennv" class="form-control" placeholder="Văn Guy" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
@@ -503,30 +513,20 @@
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label for="gioitinh">Giới tính <span class="text-danger">*</span></label>
-                                                        <select class="form-control" name="gioitinh" required>
-                                                            <option value="">-- Chọn giới tính --</option>
-                                                            <option value="nam">Nam</option>
-                                                            <option value="nu">Nữ</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
                                                         <label for="noisinh">Nơi sinh <span class="text-danger">*</span></label>
-                                                        <input type="text" name="noisinh" class="form-control" placeholder="TP.Hồ Chí Minh" required>
+                                                        <input type="text" name="noisinh" class="form-control" placeholder="Confirm Password" required>
                                                     </div>
                                                 </div>
-                                                <div class="col-md-6">
+                                                <div class="col-md-12">
                                                     <div class="form-group">
                                                         <label for="diachi">Địa chỉ <span class="text-danger">*</span></label>
-                                                        <input type="text" name="diachi" class="form-control" placeholder="..." required>
+                                                        <input type="text" name="diachi" class="form-control" placeholder="Confirm Password" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="cmnd">Số CMND/Thẻ căn cước <span class="text-danger">*</span></label>
-                                                        <input type="number" name="cmnd" class="form-control" placeholder="..." required>
+                                                        <input type="number" name="cmnd" class="form-control" placeholder="Confirm Password" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
@@ -540,25 +540,25 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="sdt">Số điện thoại <span class="text-danger">*</span></label>
-                                                        <input type="number" name="sdt" class="form-control" placeholder="..." required>
+                                                        <input type="number" name="sdt" class="form-control" placeholder="Số điện thoại" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="mail">Email <span class="text-danger">*</span></label>
-                                                        <input type="email" name="mail" class="form-control" placeholder="..." required>
+                                                        <input type="email" name="mail" class="form-control" placeholder="E-mail" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="hocvan">Trình độ học vấn <span class="text-danger">*</span></label>
-                                                        <input type="text" name="hocvan" class="form-control" placeholder="..." required>
+                                                        <input type="text" name="hocvan" class="form-control" placeholder="Trình độ học vấn" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="luong">Lương căn bản <span class="text-danger">*</span></label>
-                                                        <input type="number" name="luong" class="form-control" placeholder="..." required>
+                                                        <input type="number" name="luong" class="form-control" placeholder="Lương căn bản" required>
                                                     </div>
                                                 </div>
                                             </div>
@@ -595,13 +595,13 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="matkhau">Mật khẩu <span class="text-danger">*</span></label>
-                                                        <input type="password" name="matkhau" class="form-control" placeholder="..." required>
+                                                        <input type="password" name="matkhau" class="form-control" placeholder="Trình độ học vấn" required>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label for="matkhau0">Nhập lại mật khẩu <span class="text-danger">*</span></label>
-                                                        <input type="password" name="matkhau0" class="form-control" placeholder="..." required>
+                                                        <input type="password" name="matkhau0" class="form-control" placeholder="Trình độ học vấn" required>
                                                     </div>
                                                 </div>
                                             </div>
